src/objects/Inventory_Log__c.object
<CustomObject>
    <description>FIT Project</description>
    <fields>
        <fullName>Date_Time__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <label>Deleted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Error__c</fullName>
        <label>In Error</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inserted__c</fullName>
        <label>Inserted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <label>Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <label>Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inventory Log</label>
    <listViews>
        <fullName>All_Inventory_Log</fullName>
        <columns>NAME</columns>
        <columns>Date_Time__c</columns>
        <columns>Processed__c</columns>
        <columns>Inserted__c</columns>
        <columns>Deleted__c</columns>
        <columns>Updated__c</columns>
        <columns>In_Error__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Inventory Log</label>
    </listViews>
    <nameField>
        <displayFormat>IL-{00000}</displayFormat>
        <label>Inventory Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>